[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "temlogger"
author = ""
author-email = ""
home-page = "https://github.com/tembici/temlogger"
classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5+",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
requires = [
    "python3-logstash==0.4.80",
]

description-file = "README.md"
requires-python = ">=3.5"

[tool.flit.metadata.urls]
Documentation = "https://github.com/tembici/temlogger"

[tool.flit.metadata.requires-extra]
dev = [
    "pytest>=4.0.0",
    "pytest-cov",
]
logstash = [
    "python3-logstash==0.4.80",
]
stackdriver = [
    "google-cloud-logging>=1.14.0,<2",
]
all = [
    "python3-logstash==0.4.80",
    "google-cloud-logging>=1.14.0,<2"
]